--- a/index.html
+++ b/index.html
@@ -92,21 +92,22 @@
         }
 
         .website {
-            background: #2563eb;
-            padding: 6px;
-            width: 60px;
             align-self: flex-end;
+
+        }
+        .website a {
+            text-decoration: none !important;
+            background: #2563eb;
+            padding: 6px 16px;
+            width: 60px;
             border-radius: 10px;
             text-align: center;
             margin: 5px;
         }
 
-        .website:hover {
+        .website a:hover {
             background-color: #163f96;
-        }
 
-        a {
-            text-decoration: none !important;
         }
 
         .bio {
@@ -126,7 +127,7 @@
                 width: 80% !important;
             }
 
-            .member-card{
+            .member-card {
                 height: auto;
             }
         }
@@ -143,7 +144,7 @@
                 width: 80% !important;
             }
 
-            .member-card{
+            .member-card {
                 height: auto;
             }
         }
